--- a/ex04.md
+++ b/ex04.md
@@ -25,15 +25,11 @@ sequenceDiagram
     server-->>browser: the JavaScript file
     deactivate server
 
-    Note right of browser: The browser starts executing the JavaScript code that fetches the JSON from the server
-
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     activate server
     server-->>browser: [{ "content": "HTML is easy", "date": "2023-1-1" }, ... ]
     deactivate server
-
-    Note right of browser: The browser executes the callback function that renders the notes
 ```
 
-> In reality, the form submission makes a post request to /newnote, return the 304 code, which prompts the client to reload the exampleapp/notes, which
-> makes the get requests for the html, css, js and the raw json data 
+> In reality, the form submission makes a post request to /newnote, return the 304 code, which prompts the client to reload the exampleapp/notes adress,
+> making the get requests for the html, css, js and the raw json data 
