--- a/ex04.md
+++ b/ex04.md
@@ -5,7 +5,7 @@ sequenceDiagram
     participant browser
     participant server
 
-    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note (sends new note)
     activate server
     server-->>browser: 304 reload page exampleapp/notes
     deactivate server
