--- a/ex06.md
+++ b/ex06.md
@@ -5,7 +5,7 @@ sequenceDiagram
     participant browser
     participant server
 
-    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa (new note sent)
     activate server
     server-->>browser: 201 created (notes sent as json format)
     deactivate server
