--- a/ex06.md
+++ b/ex06.md
@@ -5,9 +5,9 @@ sequenceDiagram
     participant browser
     participant server
 
-    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa (new note sent)
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa (new note sent as json)
     activate server
-    server-->>browser: 201 created (notes sent as json format)
+    server-->>browser: 201 created 
     deactivate server
 
     browser->>server: event handler listens to submit of note form
